# smem-exporter

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: release.yml
configs/: smem_exporter.example.yaml
src/: main.rs  version.rs
tests/: health_endpoint.rs  help_output.rs  helpers.rs  metrics_endpoint.rs  version_output.rs
