[package]
name = "smem-exporter"
version = "0.1.8"
edition = "2021"
description = "Prometheus exporter for per-process RSS/PSS/USS based on /proc/*/smaps"
license = "MIT"
readme = "README.md"

[dependencies]
axum = "0.8"
clap = { version = "4.4", features = ["derive"] }
prometheus = "0.14"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
