[package]
name = "smem-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
git-version = "0.3"
axum = "0.8"
tokio = { version = "1.36", features = ["full"] }
prometheus = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rayon = "1.7"
