[package]
name = "smem-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.2", features = ["derive"] }
prometheus = "0.13"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
git-version = "0.3"
